<resources>
    <string name="app_name">SalesEGY</string>
    <string name="car_balance">Car Balance  </string>
    <string name="invoice_print">Invoices Print</string>
    <string name="updat_user">Update Customer</string>
    <string name="newcustomerwholesale">New Customer WholeSale</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_takephoto">Photo</string>
    <string name="app_title">LMSA REP</string>
    <string name="pick_customer">Pick Customer</string>
    <string name="pick_product">Pick Product</string>
    <string name="password">PassWord</string>
    <string name="photo_before">Photo Before</string>
    <string name="photo_after">Photo After</string>
    <string name="login">Log IN</string>
    <string name="picture">Take Picture</string>
    <string name="scan">Scan</string>
    <string name="username">User ID</string>
    <string name="select">Select</string>
    <string name="all_customer">All Customers</string>
    <string name="rout_customer">Route Customers</string>
    <string name="selected_customer">Go to Selected Customer</string>
    <string name="start_visit">Start Visit</string>
    <string name="photo">Photo</string>
    <string name="b_a">Before/After</string>
    <string name="StckRev">Customer Count</string>
    <string name="SlsOrdr">Sales Order</string>
    <string name="note">Notes</string>
    <string name="ViewOrdr">View Order</string>
    <string name="inv">Invoice</string>
    <string name="pay">Payment</string>
    <string name="itm">Item</string>
    <string name="itmid">ItemID</string>
    <string name="carbalance">Car Balance</string>
    <string name="qty">Qty</string>
    <string name="unt_prc">Uprice</string>
    <string name="dsc">Disc</string>
    <string name="net">Net</string>
    <string name="total">Total</string>
    <string name="or">OR</string>
    <string name="inv_dtl">Details</string>
    <string name="inv_no">Invoice No</string>
    <string name="inv_disc">Invoice Discount</string>
    <string name="ordr_dtl">Customer Order Details</string>
    <string name="fnsh_vst">Finish your Last Opened Visit</string>
    <string name="cntnu_vst">Continue the Last Opened Visit</string>
    <string name="prnt">Print</string>
    <string name="disable">Disable</string>
    <string name="inv_sav">Save</string>
    <string name="inv_vw">Print</string>
    <string name="ordr_sav">Save Order</string>
    <string name="ordr_vw">View Order</string>
    <string name="new_customer">New Customer</string>
    <string name="customer_id">Customer ID</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_name_ar">Customer Arabic Name</string>
    <string name="customer_location">Customer Location</string>
    <string name="customer_address">Customer Address</string>
    <string name="customer_country">Customer Country</string>
    <string name="customer_city">Customer City</string>
    <string name="customer_contact_name">Customer Contact Name</string>
    <string name="customer_phone_1">Customer Phone 1</string>
    <string name="customer_phone_2">Customer Phone 2</string>
    <string name="customer_phone_3">Customer Phone 3</string>
    <string name="customer_website">Customer Website</string>
    <string name="customer_contact_phone">Customer Contact Phone</string>
    <string name="customer_contact_email">Customer Contact email</string>
    <string name="customer_discount">Customer Discount</string>
    <string name="save_notes">Save the Notes</string>
    <string name="visit_notes">Enter Your Notes Here</string>

    <string name="save_customer">Save Customer</string>
    <string name="save_payment_tx">Payment</string>
    <string name="save_payment_bt">Change</string>
    <string name="invoice_header">Invoice</string>
    <string name="pay_value">Payment Value</string>
    <string name="load">Car Laod</string>
    <string name="unload">Car UnLaod</string>
    <string name="plan">Plan</string>
    <string name="reports">Reports</string>
    <string name="promo">Promotions</string>
    <string name="competitors">Competitors Reports</string>
    <string name="startvisits">Start Visits</string>

    <string name="invoices">Invoices</string>
    <string name="invoice">Invoice</string>
    <string name="save_payment">Save Payment</string>
    <string name="printinvoice">Print Invoice</string>
    <string name="new_cust">New Customer</string>
    <string name="search_by_name">Search By Name</string>
    <string name="search_by_zone">Search By Zone</string>
    <string name="customer_zone">Customer Zone</string>
    <string name="customer_categoury">Retail / WholeSale</string>
    <string name="customer_categoury_retail">New Customer Retail</string>
    <string name="customer_categoury_wholesale">New Customer WholeSale</string>
    <string name="new_customer_retail">New Customer Retail</string>
    <string name="new_customer_wholesale">New Customer WholeSale</string>
    <string name="update_customer">Update Customer</string>
    <string name="return_header">Return Invoice</string>
    <string name="order_header">Sales Order</string>
    <string name="customer_count_header">Customer Stock Count</string>
    <string name="sub_total">Invoice Sub Total</string>
    <string name="end_discount">Discount</string>
    <string name="end_total">Invoice Grand Total</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="date">1900-01-31</string>
    <string name="search">Find</string>
    <string name="invoiceprint">SalesOrder Print</string>
    <string name="SalesOrderprint">Invoices Print</string>
    <string name="exit">Exit</string>
    <string name="visitsCount">Visits Counter</string>
    <string name="returnedFromInvoice">Returned From Invoice</string>
    <string name="returns">Returns</string>
    <string name="Customer_Count">Customer Stock Count</string>
    <string name="Customer_category">Customer Category</string>
    <string name="customer_credit_limit"> Customer Credit Limit</string>
    <string name="customer_credit_type">Customer Credit Type</string>



</resources>
